# neurocuda

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gazebo  Dockerfile.ros2  Krishnav1_README.md  LICENSE  MANIFEST.in  README.md  STRATEGY.md  docker-compose.yml  ebrains_brainstyles2_mlp_mnist.py  entrypoint.sh  gate3_qcfs_convert.py  gate5_neurobench.py  mlp_mnist_weights.npz  models.py  neurocuda_ros2.dockerbuild  nir_executor.py  nir_export.py  pyproject.toml  reproduce.py  requirements.txt  setup.py  test_gazebo_full.sh  test_ros2_integration.sh  test_runtime_demo.sh  test_snn_gazebo.sh  test_snn_gazebo_full.sh  verify_nir_full.py  verify_nir_trained.py
.github/workflows/: ci.yml
benchmarks/: reproduce.sh
docs/: GROWTH_STRATEGY.md  HONEST_ASSESSMENT.md  INRC_Proposal_NeuroCUDA_Quantaracore.md  LAVA_SETUP.md  NEUROMORPHIC_BOOST.md  PLATFORM_PLAN.md  ROS2_INTEGRATION_PLAN.md  ROS2_SETUP_PLAN.md  SYNFIRE_INTEGRATION.md
examples/: convert_resnet.py  debug_cartpole_gap.py  demo.py  demo_a_multiseed.py  demo_a_perception.py  demo_a_snn_direct.py  demo_b_control.py  demo_b_conversion.py  demo_b_conversion_v2.py  demo_b_conversion_v3.py  demo_b_conversion_v4.py  demo_c_robotics_perception.py  final_results.json  final_validation.py  iftune_demo_a.py  prep_nmnist.py  qcfs_pipeline.py  resnet_pipeline.py  resnet_results.json  sew_results.json  test_converter_5d.py  train_qcfs_scratch.py  train_sew_resnet.py  validate.py
neurocuda/: __init__.py  compiler.py  converter.py  finetune.py  hub.py  ir.py  neurobench.py  qcfs.py  utils.py  verify.py
neurocuda/backends/: __init__.py  brainscales.py  cpu.py  gpu.py  lava_utils.py  loihi.py  loihi2_lava.py  nir_bridge.py  spinnaker.py
neurocuda/export/: __init__.py  fpga_pipeline.py  nir_exporter.py  verilog_export.py
neurocuda_msgs/: CMakeLists.txt  package.xml
neurocuda_msgs/msg/: SnnDetection.msg  SnnSpikeEvent.msg  SnnStatus.msg
neurocuda_ros2/: README.md  package.xml  setup.cfg  setup.py
neurocuda_ros2/config/: dashboard_layout.json  models.yaml
neurocuda_ros2/launch/: benchmark.launch.py  benchmark_replay.launch.py  control.launch.py  dashboard.launch.py  demo_gazebo.launch.py  demo_gazebo_headless.launch.py  demo_nmnist.launch.py  demo_synthetic.launch.py  infer.launch.py  record.launch.py  replay.launch.py
neurocuda_ros2/neurocuda_ros2/: __init__.py  benchmark_node.py  camera_sim.py  lifecycle_manager.py  model_loader.py  multibackend_benchmark.py  neurobench_report.py  snn_control_node.py  snn_inference_node.py  spike_viz.py
neurocuda_ros2/scripts/: demo_synthetic.py  setup_weights.py
neurocuda_ros2/worlds/: camera_test.sdf  ogre2_camera_28.sdf
rEPORT 1/: job420186_result.txt
results/: compare_snntoolbox_mlp_mnist.json  fpga_validation.json  gate3_results.md  gate5_seed0_T32.txt  ground_truth.md  lava_gate_l2.json
scripts/: audit_nir_lava_params.py  compare_snntoolbox_mlp_mnist.py  download_torch.sh  export_hub_models.py  generate_inrc_pdf.py  publish.py  quick_test.sh  run_loihi_hw_benchmark.py  test_ros2.sh  upload_to_huggingface.py
tests/: conftest.py  test_compiler.py  test_converter.py  test_device.py  test_lava_equivalence.py  test_lava_integration.py  test_loihi_bitaccurate.py  test_models.py  test_nir.py  test_utils.py  test_verify.py
(+27 files in other folders)
